--- a/package.json
+++ b/package.json
@@ -1,35 +1,27 @@
 {
-  "name": "OpenShift-Sample-App",
-  "version": "1.0.0",
-  "description": "OpenShift Sample Application",
-  "keywords": [
-    "OpenShift",
-    "Node.js",
-    "application",
-    "openshift"
-  ],
-  "author": {
-    "name": "OpenShift",
-    "email": "ramr@example.org",
-    "url": "http://www.openshift.com/"
-  },
-  "homepage": "http://www.openshift.com/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/openshift/origin-server"
-  },
-
-  "engines": {
-    "node": ">= 0.6.0",
-    "npm": ">= 1.0.0"
-  },
-
-  "dependencies": {
-    "express": "~3.4.4"
-  },
-  "devDependencies": {},
-  "bundleDependencies": [],
-
-  "private": true,
-  "main": "server.js"
+    "name": "formmailer",
+    "description": "Nodejs library sending contact form emails",
+    "keywords" : ["contact form", "mailer", "form", "contact"],
+    "author" : "Anil Kumar",
+    "version": "0.1.0",
+    "maintainers":[
+        {
+            "name":"Anil Kumar",
+            "email":"ak@sourcehut.com"
+        }
+    ],
+    "dependencies": {
+        "nodemailer": "*",
+        "express": "3.x",
+        "mongodb": "*",
+        "nconf":"*",
+        "hbs":"1.0.x"
+    },
+    "main": "server.js",
+    "engines": {
+        "node": ">=0.1.0"
+    },
+    "devDependencies": {
+        "mocha": ">=1.3"
+    }
 }
